Firefox got some serious issues about letting us style the legend element. Not only does it force me to add in browser specific styles for Firefox, it also makes me wrap the text node inside the legend element with a span as well.

--- a/stylesheets/forms.css
+++ b/stylesheets/forms.css
@@ -23,8 +23,11 @@ label, legend {
 /* Remove the label styling when inside a fieldset */
 fieldset label { float: none; font-weight: normal; margin-right: 0; text-align: left; }
 
-input, textarea { font-family: inherit; font-size: inherit; }
+/* firefox */
+html:not([lang*=""]) fieldset { position: relative; padding-left: 35%; }
+html:not([lang*=""]) legend span { display: block; position: absolute; top: 0; left: -37%; width: 35%; }
 
+input, textarea { font-family: inherit; font-size: inherit; }
 input[type="text"], input[type="password"], textarea { width: 60%; }
 
 form p {
